force-app/main/default/objects/Request_Tracker_Notification__e/Request_Tracker_Notification__e.object-meta.xml
<CustomObject>
    <description>CRM-8421: Qantas Mobile App API Platform Event</description>
    <label>Request Tracker Notification</label>
    <pluralLabel>Request Tracker Notifications</pluralLabel>
</CustomObject>