force-app/main/default/objects/Request_Tracker_Notification__e/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <description>Case Number, where Status change happened</description>
    <label>Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>