force-app/main/default/objects/Request_Tracker_Notification__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Status change message of Case/Recovery to publish to Qantas Mobile APP</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>