force-app/main/default/objects/Request_Tracker_Notification__e/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>Payload included the case, recovery object fields in a JSON format.</description>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>